--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Wheaton Academy 2023-2024 Basketball Photo Albums
+<title>Wheaton Academy 2023-2024 Basketball Photo Albums</title>
 <style>
 body {font-size: 200%; }
 </style>
