--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@ body {font-size: 200%; }
 </head>
 <body>
 <p>
-<a href="https://adobe.ly/47NwXGl">2023-11-20 vs Bartless</a>
-<p>
-<a href="https://adobe.ly/487cHjd">2023-11-24 vs Lake Park</a>
+<a href="https://adobe.ly/47NwXGl">2023-11-20 vs Bartlett</a>
 <p>
 <a href="https://adobe.ly/487cHjd">2023-11-24 vs Lake Park</a>
 <p>
