--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@ body {font-size: 200%; }
 <a href="https://adobe.ly/487cHjd">2023-11-24 vs Lake Park</a>
 <p>
 <a href="https://adobe.ly/3QUXudN">2023-11-25 vs Oak Park River Forest</a>
+<p>
+<a href="https://adobe.ly/413wtK0">2023-12-02 vs Hinsdale Central (2nd Half)</a>
 </body>
 </html>
